Addition of Drive Type spinner (correctly themed) and Climb CheckBox

--- a/AndroidScout/app/src/main/res/values/strings.xml
+++ b/AndroidScout/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">AndroidScout</string>
+
+    <string-array name="drive_types">
+        <item>Shifting</item>
+        <item>Speed</item>
+        <item>Push</item>
+
+    </string-array>
 </resources>
